# systematic-review-data-extraction

./: .env.template  .gitignore  GOOGLE_SETUP.md  LICENSE  README.md  debug_columns.py  demo_enhanced.py  enhanced_main.py  extraction_state.json  main.py  pyproject.toml  restart_extraction.py  run_extraction.py  status.py
.github/: copilot-instructions.md
src/: __init__.py  article_fetcher.py  cloudflare_r2.py  config.py  data_extractor.py  enhanced_article_fetcher.py  extraction_mode_manager.py  pdf_processor.py  progress_tracker.py  rate_limiter.py  sheets_client.py
src/debug/: README.md  add_headers.py  check_articles.py  check_headers.py  debug_columns.py  debug_sheets.py
src/scripts/: README.md  demo_enhanced.py  enhanced_main.py  restart_extraction.py  run_extraction.py  run_with_spreadsheet.py
tests/: README.md  demo.py  diagnose_failed_articles.py  enable_apis.py  fix_oauth.py  full_demo.py  oauth_fix_guide.py  setup_credentials.py  status.py  test_drivers_extraction.py  test_enhanced_fetcher.py  test_enhanced_functionality.py  test_enhanced_single_article.py  test_r2_setup.py  test_setup.py  test_single_article.py  test_url_handling.py
